--- a/src/app/login-enseignant/login-enseignant.component.html
+++ b/src/app/login-enseignant/login-enseignant.component.html
@@ -1,1 +1,19 @@
+
 <app-login></app-login>
+<!--<div class="card">
+    <h1>enseignant</h1>
+    <h1 class="text-center mb-5">Login Enseignant</h1>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" id="username" formControlName="username" placeholder="Enter your username">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" formControlName="password" placeholder="Enter your password">
+      </div>
+      <button type="submit" class="btn btn-danger">Login</button>
+    </form>
+  </div>-->
+
+  
