--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,24 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Interface</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
- 
 </head>
 <body>
- 
   <!-- bloc espace: etudiant, enseignant et administrateur -->
- <!-- <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-      <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" >
-      <label class="btn btn-outline-danger custom-bold" for="btnradio1" routerLink="/loginenseignant" routerLinkActive="active">Espace Enseignant</label>
+  <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+    <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" routerLink="/loginenseignant">
+    <label class="btn btn-outline-danger custom-bold" for="btnradio1">Espace Enseignant</label>
+   
+    <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" routerLink="/loginetudiant">
+    <label class="btn btn-outline-danger custom-bold" for="btnradio2">Espace Étudiant</label>
       
-      <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-      <label class="btn btn-outline-danger custom-bold" for="btnradio2" routerLink="/loginetudiant" routerLinkActive="active">Espace Étudiant</label>
-      
-      <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-      <label class="btn btn-outline-danger custom-bold" for="btnradio3" routerLink="/loginadmin" routerLinkActive="active">Espace Administrateur</label>
-    </div>-->
+    <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off" routerLink="/loginadmin">
+    <label class="btn btn-outline-danger custom-bold" for="btnradio3">Espace Administrateur</label>
+  </div>
   
   <div class="card">
-    <h1 class="text-center mb-5">Login</h1>
+    <h1 class="text-center mb-5" routerLink="/login">Login</h1>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="username">Username</label>
@@ -35,7 +33,5 @@
       <button type="submit" class="btn btn-danger">Login</button>
     </form>
   </div>
-  
-
 </body>
 </html>
